--- a/OrderManagementBLL/OrderManagementBLL.csproj
+++ b/OrderManagementBLL/OrderManagementBLL.csproj
@@ -7,10 +7,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Exceptions\" />
       <Folder Include="Extentions\" />
-      <Folder Include="MappingProfiles\" />
       <Folder Include="Validators\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\OrderManagementDAL\OrderManagementDAL.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="15.0.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="xunit" Version="2.9.3" />
     </ItemGroup>
 
 </Project>
