--- a/OrderManagementAPI/appsettings.json
+++ b/OrderManagementAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=OrdersManagementDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=OrdersManagementDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
 
