--- a/OrderManagementDAL/OrderManagementDAL.csproj
+++ b/OrderManagementDAL/OrderManagementDAL.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\OrderManagementDomain\OrderManagementDomain.csproj" />
+    </ItemGroup>
+
 </Project>
