--- a/WarehouseBLL/WarehouseBLL.csproj
+++ b/WarehouseBLL/WarehouseBLL.csproj
@@ -11,4 +11,10 @@
       <ProjectReference Include="..\WarehouseDomain\WarehouseDomain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="FluentValidation" Version="12.0.0" />
+    </ItemGroup>
+
 </Project>
