--- a/WarehouseDAL/WarehouseDAL.csproj
+++ b/WarehouseDAL/WarehouseDAL.csproj
@@ -8,10 +8,11 @@
 
     <ItemGroup>
       <Folder Include="Extentions\" />
-      <Folder Include="Helpers\" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Ardalis.Specification" Version="9.3.1" />
+      <PackageReference Include="Ardalis.Specification.EntityFrameworkCore" Version="9.3.1" />
       <PackageReference Include="Bogus" Version="35.6.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
