--- a/Catalog.Domain/Catalog.Domain.csproj
+++ b/Catalog.Domain/Catalog.Domain.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="MongoDB.Bson.signed" Version="2.19.0" />
+      <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
     </ItemGroup>
 
 </Project>
