--- a/Catalog.Application/Catalog.Application.csproj
+++ b/Catalog.Application/Catalog.Application.csproj
@@ -16,4 +16,8 @@
       <PackageReference Include="MediatR" Version="13.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services\" />
+    </ItemGroup>
+
 </Project>
